force-app/main/default/objects/Rental_Agreement__c/fields/Pet_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Pet_Deposit__c</fullName>
    <description>Pet Deposit Amount</description>
    <label>Pet Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>