force-app/main/default/objects/Rental_Agreement__c/fields/Rental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rental_Amount__c</fullName>
    <description>Rental Amount</description>
    <label>Rental Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>