force-app/main/default/objects/Rental_Agreement__c/fields/Rental_has_Pets__c.field-meta.xml
<CustomField>
    <fullName>Rental_has_Pets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rental has Pets</description>
    <label>Rental has Pets</label>
    <type>Checkbox</type>
</CustomField>