force-app/main/default/objects/Rental_Agreement__c/fields/Rental_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rental_Unit__c</fullName>
    <description>Rental Unit Master Detail</description>
    <label>Rental Unit</label>
    <referenceTo>Rental_Unit__c</referenceTo>
    <relationshipLabel>Rental Agreements</relationshipLabel>
    <relationshipName>Rental_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>