force-app/main/default/objects/Rental_Agreement__c/fields/Total_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced__c</fullName>
    <description>This will perform the apex rollup of Statement amounts from Statement</description>
    <label>Total Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>