force-app/main/default/objects/Rental_Agreement__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <description>This will perform the apex rollup of Payments from Statement</description>
    <label>Total Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>